5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1871_1711.log
== TEST (2019-07-02 16:02:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array=eval(input('digite:'))
prin(notas)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:02:30) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array=eval(input('digite:'))
print(notas)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:15:52) 
-- CODE:
from numpy import *
notas=array(eval(input("Digite a matriz de notas:  ")))
media=sum[notas]
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:23:01) 
-- CODE:
from numpy import *
notas=array(eval(input("Digite a matriz de notas:  ")))
media=sum[notas
		
-- EXECUTION TIME:
0.893777
-- ERROR:
  File "/home/codebench/codes/1871/1711/main.py", line 5
    
      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:23:07) 
-- CODE:
from numpy import *
notas=array(eval(input("Digite a matriz de notas:  ")))
media=sum[notas
		
-- EXECUTION TIME:
0.732621
-- ERROR:
  File "/home/codebench/codes/1871/1711/main.py", line 5
    
      ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:23:08) 
-- CODE:
from numpy import *
notas=array(eval(input("Digite a matriz de notas:  ")))
media=sum[notas
		
-- ERROR:
File "XXXX", line 5
    
      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:25:29) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("Digite a matriz de notas:  ")))
numero=int(input("Digite um nummero: "))
print(notas)
print(numero)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:26:51) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("Digite a matriz de notas:  ")))
numero=int(input("Digite um nummero: "))
print(notas)
print(numero)
soma(sum(notas[0])
print(soma)
-- ERROR:
File "XXXX", line 8
    print(soma)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:27:02) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("Digite a matriz de notas:  ")))
numero=int(input("Digite um nummero: "))
print(notas)
print(numero)
soma=sum(notas[0])
print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:28:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("Digite a matriz de notas:  ")))
numero=int(input("Digite um nummero: "))
print(notas)
print(numero)
soma=sum(notas[0])
soma1=sum(notas[1])
soma2=sum(notas[2])
print(soma)
print(soma1)
print(soma2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:28:57) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("Digite a matriz de notas:  ")))
numero=int(input("Digite um nummero: "))
print(notas)
print(numero)
soma=sum(notas[0])
soma1=sum(notas[1])
soma2=sum(notas[2])
print(round(soma,2))
print(round(soma1,2))
print(round(soma2,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:30:33) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("Digite a matriz de notas:  ")))
numero=int(input("Digite um nummero: "))
print(notas)
print(numero)
total=0
soma=sum(notas[0])
soma1=sum(notas[1])
soma2=sum(notas[2])
print(round(soma,2))
print(round(soma1,2))
print(round(soma2,2))
if(soma>=15):
	total=total+1
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:30:40) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("Digite a matriz de notas:  ")))
numero=int(input("Digite um nummero: "))
print(notas)
print(numero)
total=0
soma=sum(notas[0])
soma1=sum(notas[1])
soma2=sum(notas[2])
print(round(soma,2))
print(round(soma1,2))
print(round(soma2,2))
if(soma>=15):
	total=total+1
print(total)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:31:36) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("Digite a matriz de notas:  ")))
numero=int(input("Digite um nummero: "))
print(notas)
print(numero)
total=0
total1=0
total2=0
soma=sum(notas[0])
soma1=sum(notas[1])
soma2=sum(notas[2])
print(round(soma,2))
print(round(soma1,2))
print(round(soma2,2))
if(soma>=15):
	total=total+1
print(total)
if(soma1>=15):
	total1=total1+1
print(total1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:32:23) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("Digite a matriz de notas:  ")))
numero=int(input("Digite um nummero: "))
print(notas)
print(numero)
total=0
total1=0
total2=0
soma=sum(notas[0])
soma1=sum(notas[1])
soma2=sum(notas[2])
print(round(soma,2))
print(round(soma1,2))
print(round(soma2,2))
if(soma>=15):
	total=total+1
print(total)
if(soma1>=15):
	total1=total1+1
print(total1)
if(soma2>=15):
	total2=total2+1
print(total2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:33:21) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("Digite a matriz de notas:  ")))
numero=int(input("Digite um nummero: "))
print(notas)
print(numero)
total=0
total1=0
total2=0
soma=sum(notas[0])
soma1=sum(notas[1])
soma2=sum(notas[2])
print(round(soma,2))
print(round(soma1,2))
print(round(soma2,2))
if(soma>=15):
	total=total+1
print(total)
if(soma1>=15):
	total1=total1+1
print(total1)
if(soma2>=15):
	total2=total2+1
print(total2)
somatotal=total+total1+total2
=print(somatotal)
-- ERROR:
File "XXXX", line 26
    =print(somatotal)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:33:53) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("Digite a matriz de notas:  ")))
numero=int(input("Digite um nummero: "))
print(notas)
print(numero)
total=0
total1=0
total2=0
soma=sum(notas[0])
soma1=sum(notas[1])
soma2=sum(notas[2])
print(round(soma,2))
print(round(soma1,2))
print(round(soma2,2))
if(soma>=15):
	total=total+1
print(total)
if(soma1>=15):
	total1=total1+1
print(total1)
if(soma2>=15):
	total2=total2+1
print(total2)
somatotal=total+total1+total2
print(somatotal)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:41:45) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("Digite a matriz de notas:  ")))
numero=int(input("Digite um nummero: "))
if(soma>=15):
	total=total+1
if(soma1>=15):
	total1=total1+1
if(soma2>=15):
	total2=total2+1
	print('PASSOU')
somatotal=total+total1+total2
if soma<15:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:41:52) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("Digite a matriz de notas:  ")))
numero=int(input("Digite um nummero: "))
if(soma>=15):
	total=total+1
if(soma1>=15):
	total1=total1+1
if(soma2>=15):
	total2=total2+1
	print('PASSOU')
somatotal=total+total1+total2
if soma<15:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:42:59) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("Digite a matriz de notas:  ")))
numero=int(input("Digite um nummero: "))
if(soma>=15):
	total=total+1
	print('APROVOU')
if(soma1>=15):
	total1=total1+1
	print('APROVOU')
if(soma2>=15):
	total2=total2+1
	print('PASSOU')
somatotal=total+total1+total2
if soma<15:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:43:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("Digite a matriz de notas:  ")))
numero=int(input("Digite um nummero: "))
soma=sum(notas)[0]
if(soma>=15):
	total=total+1
	print('APROVOU')
if(soma1>=15):
	total1=total1+1
	print('APROVOU')
if(soma2>=15):
	total2=total2+1
	print('PASSOU')
somatotal=total+total1+total2
if soma<15:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:43:50) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("Digite a matriz de notas:  ")))
numero=int(input("Digite um nummero: "))
soma=sum(notas)[0]
if(soma>=15):
	total=total+1
	print('APROVOU')
if(soma1>=15):
	total1=total1+1
	print('APROVOU')
if(soma2>=15):
	total2=total2+1
	print('PASSOU')
somatotal=total+total1+total2
if soma<15:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:45:40) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("Digite a matriz de notas:  ")))
numero=int(input("Digite um nummero: "))
soma=sum(notas)[0]
if(soma>=15):
	total=total+1
	print('APROVOU')
if(soma1>=15):
	total1=total1+1
	print('APROVOU')
if(soma2>=15):
	total2=total2+1
	print('PASSOU')
somatotal=total+total1+total2
if soma<15:
	print("REPROVOU")

-- EXECUTION TIME:
0.931985
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1871/1711/main.py", line 5, in <module>
    soma=sum(notas)[0]
IndexError: invalid index to scalar variable.

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:45:46) 
-- CODE:
from numpy import *
from numpy.linalg import *
notas=array(eval(input("Digite a matriz de notas:  ")))
numero=int(input("Digite um nummero: "))
soma=sum(notas)[0]
if(soma>=15):
	total=total+1
	print('APROVOU')
if(soma1>=15):
	total1=total1+1
	print('APROVOU')
if(soma2>=15):
	total2=total2+1
	print('PASSOU')
somatotal=total+total1+total2
if soma<15:
	print("REPROVOU")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
